    * "script error", "get calling script id", "get script name" [Ralph]
    * Make $id="foo" return id so that you can write showstring($1="foo")
    * Press F5 in Custom's main menu or Script Management menu to
      reimport the last imported scripts. And while testing a game
      you can now set the scripts to be reloaded automatically (from the
      F5 in-game debug menu) [Ralph]

  * Performance Fixes
    * Fixed delay when opening a menu that happened when a large number
      of menus were defined [Ralph]
    * HSpeak was extremely slow (potentially hours) at reading files
      with DOS/Windows line-endings on Linux/Mac [Ralph]

  * Stuff Only Developers Will Notice
    * Experimental support for Android phones and tablets
    * Experimental support for the OUYA Console
    * Experimental support for the Raspberry Pi

April 9 2013 [Beelzebufo]

  * New Features
    * General preference bitset "Don't reset max stats after OOB attack"
      to prevent stat maximum values from being altered by attacks and
      items outside of battle [Ralph]
    * Max tag is now 15999 instead of 999 [James]
    * Max NPC onetime tag is now 15999 instead of 1000 [James]
    * A bunch of attack bitsets have moved into the Attack Damage
      Settings Menu, which now dynamically hides settings and bitsets
      that have no effect, and shows in detail how the attack damage
      will actually be calculated. [Ralph]
    * When adding a new hero, attack, enemy or shop, added the option
      to copy an existing one [Ralph]
    * Attack can optionally override the hero's weapon sprite [James]
    * Enemies can do an On-Death Bequest attack when killed [James]
    * Textbox backdrops can optionally allow color 0 to be transparent
      [Ralph, James]
    * The battle system can now be switched into Turn-based mode [James]
    * Attacks can be given a turn-delay in addition to a tick delay
      [James]
    * Attack base stat is no longer limited to the attacker's current